# Hw10_web

./: .gitignore  README.md  pyproject.toml
hw_toscrape/: db.sqlite3  manage.py
hw_toscrape/hw_toscrape/: asgi.py  settings.py  urls.py  wsgi.py
hw_toscrape/quotes/: urls.py  utils.py  views.py
hw_toscrape/quotes/migrations/: 0001_initial.py
hw_toscrape/quotes/templates/quotes/: base.html  index.html
hw_toscrape/quotes/templatetags/: extract.py
hw_toscrape/users/: views.py
hw_toscrape/users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signin.html
hw_toscrape/utils/: add_quotes_to_mongo.py  authors.json  migration.py
